[project]
name = "sql-convert"
version = "0.1.0"
description = "A FastAPI service to convert MySQL SQL to Oracle SQL using sqlglot"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "sqlglot>=19.0.0",
    "pydantic>=2.0.0"
]

